changed character design

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="characters">
                     <div id="you" class="character you">
                         <div class="sprite">
-                        <img src="images/me.png" alt="You" />
+                        <img src="images/me3.png" alt="You" />
                         </div>
                     </div>
                     
